# meta_prompt

./: .gitignore  AGENTS.md  README.md  pyproject.toml  segment_004.md
atlas/: subregion_func_network_Yeo_updated.csv  目标ROI.csv
brain_region_pipeline/: __init__.py  __main__.py  cli.py
configs/: README.md  friends_14roi_s01s02_vertex_gemini35_pilot_20260607.json  friends_14roi_vertex_gemini35_pilot_20260606.json  friends_7roi_vertex_gemini35_pilot_20260605.json  friends_multi_roi_pilot.json  friends_s1_10_scoring_20260617.json  friends_s1_1_scoring_20260617.json  friends_s1_1_scoring_20260618.json  friends_s1_2_scoring_20260618.json  friends_s1_3_scoring_20260617.json  friends_s1_3_scoring_20260618.json  friends_s1s2_s06_plus10_encoding_20260618.json  friends_s1s2_s06_plus3_encoding_20260617.json  friends_s1s2_s06_plus4_encoding_20260617.json  friends_s1s2_s06_plus5_encoding_20260618.json  friends_s1s2_s06_plus8_encoding_20260618.json  friends_s1s2_s06_scored_encoding_20260617.json  friends_vmpfc_tpj_ipl_pilot_20260605.json  roi_definitions_brainnetome246_yeo.json
docs/: brain_region_pipeline_vmpfc_review.md  pipeline_usage_commands.md  roi_selection.md
scripts/: generate_round8_interpretability_report.py  plot_roi_performance_95train.py  plot_train_size_comparison.py  run_friends_14roi_concurrent_pilot.py  run_friends_14roi_s01s02_vertex_pilot.py  run_friends_7roi_vertex_pilot.py  run_tribe_encoding_baseline.py  update_round8_train_size_every10.py
tests/: test_brain_region_atlas.py  test_brain_region_correlation.py  test_brain_region_description_workflow.py  (+4 more)
(+9515 files in other folders)
