[project]
name = "description-fmri"
version = "0.1.0"
description = "Brain-region prompt scoring workflow for movie-fMRI features"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.68.0",
    "h5py>=3.15.1",
    "httpx[socks]>=0.28.1",
    "matplotlib>=3.10.9",
    "numpy>=2.3.5",
    "openai>=2.0.0",
    "scikit-learn>=1.8.0",
]
